--- a/thwart tests.ipynb
+++ b/thwart tests.ipynb
@@ -54,7 +54,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "files = tu.search_to_hpgl(\"anime\", \"images/anime/\", num_sets = 3)\n",
+      "files = tu.search_to_hpgl(\"sunset\", \"images/sunset/\", num_sets = 3)\n",
       "random.shuffle(files)\n",
       "print files"
      ],
@@ -65,11 +65,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "['images/anime/anime_6.hpgl', 'images/anime/anime_0.hpgl', 'images/anime/anime_9.hpgl', 'images/anime/anime_2.hpgl', 'images/anime/anime_8.hpgl', 'images/anime/anime_7.hpgl', 'images/anime/anime_5.hpgl', 'images/anime/anime_3.hpgl', 'images/anime/anime_4.hpgl', 'images/anime/anime_10.hpgl', 'images/anime/anime_1.hpgl', 'images/anime/anime_11.hpgl']\n"
+        "['images/sunset/sunset_1.hpgl', 'images/sunset/sunset_2.hpgl', 'images/sunset/sunset_7.hpgl', 'images/sunset/sunset_11.hpgl', 'images/sunset/sunset_3.hpgl', 'images/sunset/sunset_0.hpgl', 'images/sunset/sunset_8.hpgl', 'images/sunset/sunset_10.hpgl', 'images/sunset/sunset_6.hpgl', 'images/sunset/sunset_9.hpgl', 'images/sunset/sunset_4.hpgl', 'images/sunset/sunset_5.hpgl']\n"
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -86,7 +86,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "orig = tu.clean_commands_from_file(files[0])\n",
+      "orig = tu.clean_commands_from_file(files[10])\n",
       "length = len(orig)\n",
       "\n",
       "print \"length:\", length\n",
@@ -111,7 +111,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "*** WARNING: PU(xy=CoordinateArray(<1497,11192>)) with coordinates found without prior PA or PR. PA assumed.\n",
+        "*** WARNING: PU(xy=CoordinateArray(<340,12992>)) with coordinates found without prior PA or PR. PA assumed.\n",
         "length:"
        ]
       },
@@ -119,8 +119,8 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        " 25480\n",
-        "num_chunks: 10\n",
+        " 113805\n",
+        "num_chunks: 11\n",
         "w:"
        ]
       },
@@ -128,11 +128,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        " 9000 h: 11259\n"
+        " 13005 h: 12999\n"
        ]
       }
      ],
-     "prompt_number": 21
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -163,117 +163,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "35000/25"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 9,
-       "text": [
-        "1400"
-       ]
-      }
-     ],
-     "prompt_number": 9
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 32
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 43
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 21
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 32,
-       "text": [
-        "5623"
-       ]
-      }
-     ],
-     "prompt_number": 32
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 10
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 10
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 10
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 10
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 15
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
